service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    run: second-app
  ports:
    - port: 3000
      targetPort: 80
